# GLiNER-API

./: .dockerignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  compose.yaml  cpu.Dockerfile  cpu.compose.yaml  gliner2.ipynb  gpu.Dockerfile  gpu.compose.yaml  main.py  pyproject.toml  renovate.json5  repo-og-image.xcf  run_glinerx_large.sh  run_medical.sh  run_pii.sh  translations.json
.github/workflows/: docker-release.yml  ruff.yml  scorecard.yml
example_configs/: general.yaml  general_onnx.yaml  general_onnx_quantized.yaml  medical.yaml  pii+phi_quantized.yaml  pii.yaml
gliner_api/: __init__.py  backend.py  config.py  datamodel.py  examples.py  frontend.py  translations.py  version.py
