[project]
name = "gliner-api"
version = "0.3.7"
description = "Easily configurable API & frontend providing simple access to dynamic NER models"
readme = "README.md"
requires-python = "==3.14.6"
dependencies = [
    "fastapi[standard]==0.138.0",
    "gitpython==3.1.50",
    "huggingface-hub==1.20.1",
    "prometheus-client==0.25.0",
    "pydantic-settings==2.14.2",
    "uvicorn[standard]==0.49.0",
    "torch==2.12.1",
    "gliner[stanza]==0.2.27",
    "onnxruntime==1.27.0",
    "gradio==6.19.0",
    "httpx==0.28.1",
    "stamina==26.1.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["ipykernel==7.3.0", "pre-commit==4.6.0", "ruff==0.15.19", "ty==0.0.53"]
